# web-chat-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.bat  setup.sh  web_chat_bridge.py  易经智慧谱.md
docs/: ARCHITECTURE.md  COMPARISON.md
examples/: demo_multi_critic.bat  demo_multi_critic.sh
mcp/: api_client.py  browser_controller.py  browser_pool.py  cache.py  chat_adapters.py  config.py  daemon.py  image_handler.py  inquiry.py  page_map.py  requirements.txt  review_engine.py  router.py  server.py  test_imports.py
scripts/: auto_review.py  multi_critic.py
