[project]
name = "web-chat-bridge"
version = "5.0.0"
description = "Multi-Model Actor-Critic Collaboration — let LLMs cross-review each other through web UIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "cachetools",
]

[project.urls]
Homepage = "https://github.com/mels2/web-chat-bridge"
Issues = "https://github.com/mels2/web-chat-bridge/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"