[project]
name = "web-chat-bridge"
version = "4.0.0"
description = "Multi-Model Actor-Critic Collaboration — let LLMs cross-review each other through web UIs. Now with native MCP stdio server."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "cachetools>=5.3.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mels2/web-chat-bridge"
Issues = "https://github.com/mels2/web-chat-bridge/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
